@@ -1,6 +1,7 @@
 * Version 2.1.2 (unreleased)
  ** Allow spaces in OATH keys.
  ** Don't crash if smartcard subsystem isn't available.
+ ** Disable systray icon by default.
 
 * Version 2.1.1 (released 2015-07-02)
  ** Added man pages.
